made some changes to errors in the transcript

--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -273,7 +273,7 @@
           -->
 
           <li class="page-scroll">
-            <a href="#episodes">Episode</a>
+            <a href="#episodes">Listen</a>
           </li>
           <li class="page-scroll-offset">
             <a href="#read">Read</a>
