supersecretlogin form is working! now need to try to get annotations to appear

--- a/app/templates/secretlogin.html
+++ b/app/templates/secretlogin.html
@@ -4,6 +4,9 @@
     </head>
     <body>
         <h1>OAuth Demo</h1>
+        <p>
+          <a href="{{url_for('index')}}"> back to homepage</a>
+        </p>
         {% for message in get_flashed_messages() %}
             <p><b>Error</b>: {{ message }}</p>
         {% endfor %}
