--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -32,18 +32,14 @@
   <!-- audiodoc css (nav bar always solid) -->
   <link href="/static/css/audiodoc_page.css" rel="stylesheet">
 
+  <!-- annotator -->
+  <link href="/static/css/annotator.min.css" rel="stylesheet" type="text/css">
 
   <!-- Custom Fonts -->
   <link href="/static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href='http://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
   <link href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-  <![endif]-->
 
 
 
@@ -365,7 +361,7 @@
         </div>
 
         <div class="col-md-12" id="read">
-          <div class="transcript"> <!-- transcript class gives the padding -->
+          <div class="transcript" id="annotator_transcript"> <!-- transcript class gives the padding. annotator_transcript allows annotator to work -->
             {{ audiodoc[0].transcript | safe }}
           </div>
         </div>
@@ -523,8 +519,16 @@
   <script src="/static/js/knowitwall.js"></script>
 
   <script src="/static/js/audioplayer.js"></script>
+  <script src="/static/js/annotator-full.min.js"></script>
 
+</script>
 
+  <script type="text/javascript">
+    jQuery(function ($) {
+      $('#annotator_transcript').annotator()
+                   .annotator('setupPlugins');
+    });
+  </script>
   <script>
     $( function()
     {
