now the most basic setup of annotations (With annotateIt login) allows me to view previous annotations, but not edit..

--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -523,12 +523,29 @@
 
 </script>
 
+<!--
   <script type="text/javascript">
     jQuery(function ($) {
-      $('#annotator_transcript').annotator()
-                   .annotator('setupPlugins');
+        $('#annotator_transcript').annotator({
+            readOnly: false
+        })
+        .annotator('setupPlugins');
     });
   </script>
+-->
+<script type="text/javascript">
+function initAnnotator(json) {
+  "use strict";
+
+  $('#annotator_transcript').annotator().annotator('setupPlugins', null, {
+    Permissions: true,
+    AnnotateItPermissions: {}
+  });
+}
+</script>
+<script type="application/javascript" src="http://jsonip.com/initAnnotator"></script>
+
+
   <script>
     $( function()
     {
