took off most of the left and right padding for the transcripts for smaller screen sizes

--- a/app/static/css/knowitwallredux.css
+++ b/app/static/css/knowitwallredux.css
@@ -491,6 +491,12 @@ text-align: left;
 .transcript{
 padding: 40px;
 }
+@media(max-width:991px) {
+  .transcript{
+  padding: 4px;
+  }
+}
+
 
 #layout {
 padding:40px;
