--- a/app/static/css/knowitwallredux.css
+++ b/app/static/css/knowitwallredux.css
@@ -441,6 +441,7 @@ text-align: left;
   background-color: rgba(255, 194, 28, 1);
   margin-bottom: 20px;
   display: inline-block;
+  line-height: 120%;
 }
 
 @media(max-width:561px) {
