put a slightly bigger line-height on transcript. easier to read now

--- a/app/static/css/knowitwallredux.css
+++ b/app/static/css/knowitwallredux.css
@@ -492,10 +492,17 @@ text-align: left;
 .transcript{
 padding: 40px;
 }
+.transcript p {
+  line-height: 170%;
+  }
+
 @media(max-width:991px) {
   .transcript{
   padding: 4px;
   }
+  .transcript p {
+    line-height: 140%;
+    }
 }
 
 
