got basic header image on audiodoc page that looks bad for now

--- a/app/static/css/audiodoc_page.css
+++ b/app/static/css/audiodoc_page.css
@@ -11,3 +11,12 @@
   width:70%;
 }
 }
+
+/*
+header {
+  text-align: right;
+  color: #eee;
+  background: url("/static/Images/Mehdi_BenSlama.jpg");
+  background-size: cover;
+  background-color: #5C5D62;
+}*/
