--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -334,6 +334,20 @@
     </div>
   </nav>
 
+  <header style="background: url('/static/Images/Mehdi_BenSlama.jpg');">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-10 col-lg-offset-1 text-center">
+          <div class="episode-title{{audiodoc[0].topic_name_wrap}}">
+            {{audiodoc[0].topic_name | safe}}
+          </div>
+        </div>
+        </div>
+        </div>
+      </div>
+  </header>
+
+
   <section id="episodes">
     <div class="container previous-audiodoc">
       <div class="row">
