got shakespeare image on site

--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -334,7 +334,7 @@
     </div>
   </nav>
 
-  <header style="background: url('/static/Images/Mehdi_BenSlama.jpg');">
+  <header style="background: url('/static/Images/Rene_shakespeare_square.jpg');background-size: cover; ">
     <div class="container">
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1 text-center">
@@ -342,9 +342,8 @@
             {{audiodoc[0].topic_name | safe}}
           </div>
         </div>
-        </div>
-        </div>
       </div>
+    </div>
   </header>
 
 
