--- a/app/templates/audiodoc_img.html
+++ b/app/templates/audiodoc_img.html
@@ -318,14 +318,32 @@
     </div>
   </nav>
 
+  <header style="background: url('/static/Images/shakespeare_test.jpg');background-size: cover; ">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-10 col-lg-offset-1 text-center">
+          <div class="episode-title" style="background-color: rgba(255, 194, 28, 0.8);">
+            {{audiodoc[0].topic_name | safe}}
+          </div>
+        </div>
+
+        <div class="col-lg-10 col-lg-offset-1 text-center" style="color: black; font-size:115%">
+           <i>by</i> <span style="background-color: rgba(255, 194, 28, 0.8);">{{audiodoc[0].author_name | safe}}</span> <i>in</i> <span style="background-color: rgba(255, 194, 28, 0.8);">{{audiodoc[0].discipline}} </span>.
+
+          <div id="tagline-2">
+          <br>
+          <br>
+          </div>
+      </div>
+  </header>
 
   <section id="episodes">
     <div class="container previous-audiodoc">
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1 text-center">
-          <div class="episode-title">
+          <!-- <div class="episode-title">
             {{audiodoc[0].topic_name | safe}}
-          </div>
+          </div> -->
 
 
           <p style="font-size:1.6em;">{{audiodoc[0].topic_description | safe}}</p>
