--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -390,7 +390,7 @@
 
     <section id="episodes">
       {% for audiodoc in audiodocs %}
-      <div class="container previous-audiodoc">
+      <div class="container previous-audiodoc" style="background: url('/static/Images/shakespeare_topic_image_very_ight.jpg')">
         <div class="row">
 
           <div class="col-lg-10 col-lg-offset-1 text-center">
@@ -413,9 +413,9 @@
             </audio>
           </div>
 -->
-          <div class="comments-button">
+          <!-- <div class="comments-button">
             <a href="audiodoc/{{audiodoc.url}}"><button type="button" class="btn btn-info">  CHECK IT OUT </button> </a>
-          </div>
+          </div> -->
           <br>
         </div>
       </div> <!-- container -->
