--- a/app/templates/audiodoc_img.html
+++ b/app/templates/audiodoc_img.html
@@ -8,13 +8,13 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="{{audiodoc[0].og_description}}">
+  <meta name="description" content="{{audiodocs[0].og_description}}">
   <meta name="keywords" content="Knowitwall, Know It Wall, audio-documentary, audiodoc, outreach, academia, insightful, science, humanities">
   <meta name="author" content="">
   <meta property="og:image" content="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" />
-  <meta property="og:title" content="{{audiodoc[0].og_name}}" />
-  <meta property="og:description" content="{{audiodoc[0].og_description}}" />
-  <meta property="og:url" content="http://knowitwall.com/audiodoc/{{audiodoc.url}}" />
+  <meta property="og:title" content="{{audiodocs[0].og_name}}" />
+  <meta property="og:description" content="{{audiodocs[0].og_description}}" />
+  <meta property="og:url" content="http://knowitwall.com/audiodoc/{{audiodocs.url}}" />
   <meta property=”og:type” content=”website” />
   <link rel="icon" href="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
 <!-- pens -->
@@ -29,9 +29,6 @@
 
   <!-- Custom CSS -->
   <link href="/static/css/knowitwallredux.css" rel="stylesheet">
-
-  <!-- audiodoc css (nav bar always solid) -->
-  <link href="/static/css/audiodoc_page.css" rel="stylesheet">
 
 
   <!-- Custom Fonts -->
@@ -244,17 +241,6 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <!--
-          <li class="hidden">
-             <a href="#page-top"></a>
-          </li>
-          -->
-
-          <!--
-          <li class="page-scroll">
-            <a href="#page-top">Home</a>
-          </li>
-          -->
 
           <li class="page-scroll">
             <a href="#episodes">Listen</a>
@@ -318,43 +304,40 @@
     </div>
   </nav>
 
-  <header style="background: url('/static/Images/shakespeare_topic_image.jpg');background-size: cover; ">
+  <header style="background: url('{{ audiodocs[0].topic_image }}');">
     <div class="container">
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1 text-center">
-          <div class="episode-title" style="background-color: rgba(255, 194, 28, 0.8);">
-            {{audiodoc[0].topic_name | safe}}
+          <div class="episode-title">
+            {{audiodocs[0].topic_name | safe}}
           </div>
         </div>
 
         <div class="col-lg-10 col-lg-offset-1 text-center page-scroll" style="color: #33353d; font-size:115%">
-           <i>by</i> <a href="#author" class="highlight">{{audiodoc[0].author_name | safe}}</a> <i>in</i> <span class="highlight">{{audiodoc[0].discipline}} </span>.
+           <i>by</i> <a href="#author" class="highlight">{{audiodocs[0].author_name | safe}}</a> <i>in</i> <span class="highlight">{{audiodocs[0].discipline}} </span>.
 
           <div id="tagline-2">
           <br>
           <br>
           </div>
       </div>
+    </div>
+  </div>
   </header>
 
   <section id="episodes">
     <div class="container previous-audiodoc">
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1 text-center">
-          <!-- <div class="episode-title">
-            {{audiodoc[0].topic_name | safe}}
-          </div> -->
-
-
-          <p style="font-size:1.6em;">{{audiodoc[0].topic_description | safe}}</p>
-          <p style="font-style:italic;">narrated by {{ audiodoc[0].narration_credits }}</p>
-          <p style="font-style:italic;">music by {{ audiodoc[0].music_credits }}</p>
+          <p style="font-size:1.6em;">{{audiodocs[0].topic_description | safe}}</p>
+          <p style="font-style:italic;">narrated by {{ audiodocs[0].narration_credits }}</p>
+          <p style="font-style:italic;">music by {{ audiodocs[0].music_credits }}</p>
         </div>
 
         <div class="col-lg-12">
 
           <audio controls id="author">
-            <source src="{{audiodoc[0].audio_mp3}}" type="audio/mpeg">
+            <source src="{{audiodocs[0].audio_mp3}}" type="audio/mpeg">
             Your browser does not support the audio element.
           </audio>
 
@@ -363,16 +346,16 @@
 
           <div class="author-bio">
             <div class="col-md-3">
-              <img class="clip-circle"class="img-responsive" src="{{audiodoc[0].author_image}}"  alt = "author image">
+              <img class="clip-circle"class="img-responsive" src="{{audiodocs[0].author_image}}"  alt = "author image">
             </div>
             <div class="col-md-3">
               <div class="author-name">
-              <h2 style="text-align:right;"> {{ audiodoc[0].author_name | safe}} </h2>
+              <h2 style="text-align:right;"> {{ audiodocs[0].author_name | safe}} </h2>
               </div>
             </div>
             <div class="col-md-6">
               <div class="vertical-line">
-              <p > {{ audiodoc[0].author_bio | safe}} </p>
+              <p > {{ audiodocs[0].author_bio | safe}} </p>
               </div>
             </div>
           </div>
@@ -380,7 +363,7 @@
 
         <div class="col-md-12" id="read">
           <div class="transcript"> <!-- transcript class gives the padding -->
-            {{ audiodoc[0].transcript | safe }}
+            {{ audiodocs[0].transcript | safe }}
             <!-- Go to www.addthis.com/dashboard to customize your tools -->
             <div class="addthis_sharing_toolbox" style="float: right;"></div>
           </div>
@@ -392,9 +375,9 @@
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
             var disqus_shortname = 'knowitwall'; // Required - Replace '<example>' with your forum shortname
-            var disqus_identifier = '{{audiodoc[0].unique_id}}';
-            var disqus_url = 'http://knowitwall.com/{{audiodoc[0].unique_id}}';
-            var disqus_title = '{{audiodoc[0].unique_id}}';
+            var disqus_identifier = '{{audiodocs[0].unique_id}}';
+            var disqus_url = 'http://knowitwall.com/{{audiodocs[0].unique_id}}';
+            var disqus_title = '{{audiodocs[0].unique_id}}';
             /* * * DON'T EDIT BELOW THIS LINE * * */
             (function() {
                 var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
@@ -452,7 +435,7 @@
             </div>
 
 
-            <input type="hidden" name="ad_name" value="{{audiodoc[0].topic_name}}">
+            <input type="hidden" name="ad_name" value="{{audiodocs[0].topic_name}}">
 
             <br>
             <div id="success"></div>
