--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -338,7 +338,7 @@
 
 
 
-  <header style="background: url('{{ audiodocs[0].topic_image_midlight }}');">
+  <header style="background: url('{{ audiodocs[0].topic_image_home }}');">
     <div class="container">
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1 text-center">
@@ -350,10 +350,6 @@
         <div class="col-lg-10 col-lg-offset-1 text-center page-scroll" style="color: black; font-size:125%">
            <i>by</i> <a href="audiodoc/{{audiodocs[0].url}}#author" class="highlight">{{audiodocs[0].author_name | safe}}</a> <i>in</i> <span class="highlight">{{audiodocs[0].discipline}} </span>
 
-          <div id="tagline-2">
-          <br>
-          <br>
-          </div>
       </div>
     </div>
   </div>
@@ -386,7 +382,7 @@
 
     <section id="episodes">
       {% for audiodoc in audiodocs[:] %}
-      <div class="container previous-audiodoc" style="background: url('{{audiodoc.topic_image_light}}')">
+      <div class="container previous-audiodoc" style="background: url('{{audiodoc.topic_image_box}}')">
         <div class="row">
 
           <div class="col-lg-10 col-lg-offset-1 text-center">
