finished images (apart from mehdi). got some of the copyright stuff

--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -334,7 +334,7 @@
     <div class="container image_credits">
       <div class="row ">
         <p>
-          image credits: {{audiodocs[0].image_credits}}
+          {{audiodocs[0].image_credits | safe}}
         </p>
       </div>
     </div>
