took off most recent audiodoc from the list on the homepage

--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -381,7 +381,7 @@
   <!-- AUDIODOCS!! -->
 
     <section id="episodes">
-      {% for audiodoc in audiodocs[:] %}
+      {% for audiodoc in audiodocs[1:] %}
       <div class="container previous-audiodoc" style="background: url('{{audiodoc.topic_image_box}}')">
         <div class="row">
 
