changes for image sizes..

--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -338,7 +338,7 @@
 
 
 
-  <header style="background: url('{{ audiodocs[0].topic_image_home }}');">
+  <header style="background: url('{{ audiodocs[0].topic_image_home }}'); background-size:cover;">
     <div class="container">
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1 text-center">
