another mobile fix for images in homepage boxes

--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -382,7 +382,7 @@
 
     <section id="episodes">
       {% for audiodoc in audiodocs[1:] %}
-      <div class="container previous-audiodoc" style="background: url('{{audiodoc.topic_image_box}}')">
+      <div class="container previous-audiodoc" style="background: url('{{audiodoc.topic_image_box}}'); background-size:cover;">
         <div class="row">
 
           <div class="col-lg-10 col-lg-offset-1 text-center">
