--- a/app/templates/knowitwall.html
+++ b/app/templates/knowitwall.html
@@ -355,6 +355,7 @@
   </div>
   </header>
 
+<!-- <span class="scrollything" id="about"></span> -->
   <!-- About Section -->
   <section class="success" id="about">
     <div class="container">
