--- a/app/static/css/knowitwallredux.css
+++ b/app/static/css/knowitwallredux.css
@@ -292,10 +292,20 @@ header .container {
     padding-bottom: 300px;
 }
 
+
 .previous-audiodoc{
-  background-color: #F0F0F0;    /*#F8F8F8 */
+  background-color: #F0F0F0;    /* #F8F8F8 */
   padding-top: 30px;
+
 }
+
+/* makes the grey box for audiodoc transcript less wide only for large screen */
+@media(min-width:1220px){
+  .previous-audiodoc{
+    width: 1000px;
+  }
+}
+
 
 
 header img {
